<resources>
    <string name="app_name">Push Ups Counter</string>
    <string name="start">Start</string>
    <string name="history">History</string>
    <string name="reset">Reset counter</string>
    <string name="count_sets">Number of sets:</string>
    <string name="message_delete">Do you really want to remove the story?</string>
    <string name="yes_button">Yes</string>
    <string name="no_button">No</string>
    <string name="first_start_counter_message_with_proximity_sensor">The counter uses motion sensors. During push-ups, put your phone against your chest and go down until you hear the meter\'s voice. If for some reason the counter does not work correctly for you, select another mode in the settings</string>
    <string name="ok_button">OK</string>
    <string name="finish_workout">Finish your workout</string>
    <string name="all_sets">Total number of sets:</string>
    <string name="all_push_ups">Total number of push-ups:</string>
    <string name="achievements">Achievements</string>
    <string name="beginner">Beginner</string>
    <string name="make_word">Make</string>
    <string name="push_ups">push ups</string>
    <string name="message_not_have_any_history">There is nothing yet. Make a training to add the first story</string>
    <string name="start_the_first_training">Start the first training</string>
    <string name="novice">Novice</string>
    <string name="good_shaped">Good shaped</string>
    <string name="top_guy">Top guy</string>
    <string name="sportsman">Sportsman</string>
    <string name="fighter">Fighter</string>
    <string name="gladiator">Gladiator</string>
    <string name="superman">Superman</string>
    <string name="titan">Titan</string>
    <string name="delete">Delete</string>
    <string name="how_to_use_the_counter">Important message!</string>
    <string name="the_choose_one">The Chosen One</string>
    <string name="cyborg">Cyborg</string>
    <string name="strongman">Strongman</string>
    <string name="the_legend">The Legend</string>
    <string name="champion">Champion</string>
    <string name="do_you_really_want_exit">Do you really want to finish your workout? Results will not be saved!</string>
    <string name="click_again">Try again to exit</string>
    <string name="count_push_ups">Number of push ups</string>
    <string name="enter_the_number_of_pushups">Enter the number of push ups</string>
    <string name="done">Done</string>
    <string name="exit">Exit</string>
    <string name="title_activity_settings">Settings</string>

    <string name="push_up_counting_method">Push-up counting method</string>
    <string name="counter_mode_operation">Counter operation mode</string>
    <string name="first_start_counter_message_without_proximity_sensor">No motion sensor was detected on your device, so the counter alternative mode is enabled. During push-ups, press your nose on the counter or select another option in the settings</string>
    <string name="change_on_touch_counter">In this mode, during push-ups, press the counter with your nose</string>
    <string name="change_on_right_counter">In this mode, during push-ups, press the counter and enter the number of push-ups</string>
    <string name="change_on_proximity_sensor">In this mode, during push-ups, place the phone at chest level and lower yourself until you hear the voice of the counter. If for some reason the counter does not work correctly for you, select another mode in the settings</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="rate_us">Rate us</string>
    <string name="other">Other</string>
</resources>