<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="35dp"
    android:layout_gravity="center">

    <TextView
        android:id="@+id/textview_count_push_ups"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_the_number_of_pushups"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.1"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/count_push_ups"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_count_push_ups"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:inputType="number"
            android:maxLength="3"
            android:background="@color/white"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/done"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textField"
        />

    <Button
        android:id="@+id/button_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/exit"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:textColor="@color/red_500"
        android:theme="@style/CustomButtonMaterial"
        app:layout_constraintEnd_toStartOf="@id/button_done"
        app:layout_constraintTop_toBottomOf="@id/textField"
        />

</androidx.constraintlayout.widget.ConstraintLayout>